ready for https

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container-fluid">
     <div class="float-left">
-      <span><a href="http://www.sardcoin.eu">SardCoin</a> © {{this.copyrightYear}} UniCA</span>
+      <span><a href="https://www.sardcoin.eu">SardCoin</a> © {{this.copyrightYear}} UniCA</span>
     </div>
     <div class="float-right">
       <span>
