--- a/src/app/features/reserved-area/personal-info/personal-info.component.html
+++ b/src/app/features/reserved-area/personal-info/personal-info.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mb-0">
   <div class="row">
     <div class="col-lg-12 col-xl-9">
       <div class="card">
@@ -244,3 +244,23 @@
     </div>
   </div>
 </div>
+
+<ng-template #updateInfo>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Are you sure?</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    Do you really want to update your informations? You will be logged out from the platform.
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-danger" (click)="closeModal()">No</button>
+    <button type="button" class="btn btn-success" (click)="updateUser()">
+      Yes
+    </button>
+  </div>
+</ng-template>
