--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 
 // Import styles
 @import "node_modules/@coreui/coreui/scss/coreui";
+@import '~ngx-toastr/toastr-bs4-alert';
 
 // If you want to add something do it here
 @import "custom";
