--- a/src/app/features/reserved-area/payment-details/payment-details.component.scss
+++ b/src/app/features/reserved-area/payment-details/payment-details.component.scss
@@ -1,5 +1,5 @@
-.col-form-label{
-  color: #20a8d8 !important;
-  padding-top: 10px;
-  font-size: 16px;
+.label-tiny {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 500;
 }
