--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
 
       <div *ngIf="this.userType == '3' || this.userType == '0' || this.userType == '1'">
         <a [routerLink]="['/reserved-area/verifier']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">Verifer page</span>
+          <span class="menu-collapsed">Verifier page</span>
         </a>
 
       </div>
