Fixed breadcrumb quantity on cart

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -37,7 +37,7 @@
               <i class="fa fa-user"></i> Profile</a>
             <a class="dropdown-item" href="#">
               <i class="fa fa-wrench"></i> Settings</a>
-            <a class="dropdown-item" (click)="openModal(template)">
+            <a class="dropdown-item cursor-pointer" (click)="openModal(template)">
               <i class="fa fa-lock"></i> Logout</a>
             <ng-template #template>
               <div class="modal-header">
